feat(#8): add login endpoint
